css/main.css
/*FONT*/

@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,800';
.open-sans{
	font-family: 'Open Sans', sans-serif;
}



/*GLOBAL STYLING*/
html{
	height: 100%;
	/*overflow: hidden;*/
}

body{
	background-color: rgba(33,35,56,1);
	margin: 0;
	height: 100%;
	font-family: 'Open Sans', sans-serif;
}

span{
	font-weight: 400;
}

/*COLORS*/

.background-dark-grey{
	background-color: #333333;
}

.background-light-grey{
	background-color: #eeeeee;
}

.background-blue{
	background-color: #2554B0;
}

.grayscale{
	-webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
    filter: grayscale(100%);
}

.grayscale-50{
	-webkit-filter: grayscale(50%); /* Chrome, Safari, Opera */
    filter: grayscale(50%);
}

.grayscale-75{
	-webkit-filter: grayscale(75%); /* Chrome, Safari, Opera */
    filter: grayscale(75%);
}

.electric-back{
	background-color: rgba(234,245,186,1);
}

.font-white{
	color: #ffffff;
}

.berry-text{
	color: rgba(51,22,41,1.0);
}

.berry-back{
	background-color: rgba(56,24,61,0.5);
}

.teal-back{
	background-color: rgba(18,51,41,0.5);
}

.sky-back{
	background-color: rgba(215,249,251,1);
}

.sky-text{
	color: rgba(215,249,251,1);
}

.electric-blue-back{
	background-color: rgba(10,50,92,1);
}
.skinny-border-white{
	border-style: solid;
	border-width: 2px;
	border-color: #ffffff;
}



/*OPACITY*/

.opacity-50{
	opacity: 0.5;
}

.opacity-25{
	opacity: 0.25;
}

.opacity-30{
	opacity: 0.3;
}

.opacity-75{
	opacity: 0.75;
}

.opacity-65{
	opacity: 0.65;
}
.invisible{
	visibility:hidden; 
}


/*OBJECT SIZING*/

.full-image{
	width: 100%;
	height: auto;
}

.min-width-1331{
	min-width: 1331px;
}

.min-width-999{
	min-width: 999px;
}

.height-400{
	height: 400px;
}

.height-full{
	height: 100%;
}

.height-auto{
	height: auto;
}

.width-full{
	width: 100%;
}

.height-fit{
	height: 80%;
}

.width-fit{
	width: 90%;
}

.ad-avoider{
	width: calc(100% - 410px);
}


.title-font-size{
	font-size: 5em;
}

.agenda-tracker{
	width: 2px;
}

.min-height-100p{
	min-height: 100%;
}

/*IMAGE SIZING*/

.image-width-full-sizing{
	width: 100%;
	height: auto;
}

/*OBJECTS*/
.faq-container{
	padding: 20px;
	width: calc(100% - 40px);
}
.agenda-object{
	position: relative;
	width: 100%;
	height: 60px;
	color: #ffffff;
	float: left;
	padding-top: 10px;
	min-width: 232px;
	cursor: default;
}

/*OBJECT ATTRIBUTES*/
.agenda-object-container{
}
.blur-50{
	-webkit-filter: blur(5px); /* Chrome, Safari, Opera */
    filter: blur(5px);
}
.background-big-image{
	background-size: 100% auto;
	background-repeat: no-repeat;
}

.overflow-hidden{
	overflow: hidden;
}

.overflow-x-hidden{
	overflow-x: hidden; 
}

.overflow-y-hidden{
	overflow-y: hidden; 
}
.overflow-auto{
	overflow: auto;
}
.overflow-visible{
	overflow: visible;
}

.inline{
	display: inline;
}

.no-margin{
	margin: 0;
}
.no-padding{
	padding:none;
}
.link{
	cursor: pointer;
}
.no-cursor{
	cursor: default;
}

.get-off-right{
	padding-right: 20px;
}

.unselectable{
	-webkit-user-select: none; /* Chrome/Safari */        
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* IE10+ */

	/* Rules below not implemented in browsers yet */
	-o-user-select: none;
	user-select: none;
}

.padding-bottom-20{
	padding-bottom: 20px;
}
.padding-top-20{
	padding-top: 20px;
}

.skinny-font{
	font-weight: 300;
}

.electric-separator{
	display: block;
	height: 2px;
	background-color: rgba(234,245,186,1);
	border:none;
}

.day-sign{
	cursor: default;
	/*width: 150px;*/
	/*height: 300px;*/
	z-index: 2;
}

.agenda-trackball{
	-moz-transition: all .1s ease-in;
    -o-transition: all .1s ease-in;
    -webkit-transition: all .1s ease-in;
    transition: all .1s ease-in;
	width: 10px;
	height: 10px;
	border-radius: 10px;
	left: -5.5px;
	margin-top: 6px;
	position: absolute;
	border-style: solid;
	border-width: 2px;
	border-color: #ffffff;
	background-color: rgba(75,75,75,1);
	/*transform: translateX(calc(-180% - 1px));*/
}

.agenda-trackball:hover{
	width: 20px;
	height: 20px;
	border-radius: 20px;
	margin-top: 0;
	left: -11px;
	background-color: rgba(10,50,92,1);
}

.agenda-object:hover > .agenda-trackball{
	width: 20px;
	height: 20px;
	border-radius: 20px;
	margin-top: 0;
	left: -11px;
	background-color: rgba(10,50,92,1);
}

.agenda-time{
	position: absolute;
	left: -110px;
	width: 80px;
	text-align: right;
	cursor: default;
	color: rgba(215,249,251,1);
}

.agenda-text{
	position: absolute;
	width: 100%;
	left: 40px;
	color: #ffffff;
}
.clear-left{
	clear: left;
}
.clear-right{
	clear: right;
}
.clear-both{
	clear: both;
}

.faq-item{
	width: calc(50% - 10px);
	position: relative;
	color: #ffffff;
	padding-left: 5px;
	padding-right: 5px;
	clear: none;
}

.faq-item h4{
	color: rgba(234,245,186,1);
}

.faq-item a{
	cursor: pointer;
	color: rgba(215,249,251,1);
}

.faq-item a:visited{
	color: rgba(215,249,251,1);
}

.center{
	clear: both;
	width: 80%;
	margin: 0 auto;
	text-align: center;
}

/*POSITION*/

.position-relative{
	position: relative;
}

.relative-centering{
	margin: 0 auto;
}

.position-absolute{
	position: absolute;
}

.position-absolute-top{
	top: 0;
	left: 0;
}

.position-over{
	position: absolute;
	top: 0;
	left: 0;
	z-index: 2;
}

.position-under{
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1;
}

.float-left{
	float: left;
}

.float-right{
	float: right;
}

.position-absolute-middle{
	position: absolute;
  	left: 50%;
  	top: 50%;
  	transform: translateX(-50%) translateY(-50%);
}

.position-translate-x-middle{
	transform: translateX(calc(-50% + 1px));
}

.right-20{
	right: 20px;
}

.right-5p{
	right: 5%;
}

.left-5p{
	left: 5%;
}

.top{
	top: 0;
}

.top-10{
	top: 10px;
}

.position-inline-outer-middle{
	text-align: center;
}
.position-inline-inner-middle{
	display: inline-block;
}

.zindex-3{
	z-index: 3;
}

.zindex-top{
	z-index: 999;
}

.negative-margin-full{
	transform: translateY(-100%);
}

.margin-right-10{
	margin-right: 10px;
}

.margin-left-10{
	margin-left: 10px;
}

.margin-left-60{
	margin-left: 60px;
}

.bump-top-left{
	margin-left: 20px;
	margin-top: 20px;
}
.bump-down-10{
	padding-top: 10px;
}
.title-placement{
	padding-top: 50px;
	padding-left: 50px;
}

/*UNIQUE*/
#main-image-cover{
}

#atlanta-gif{
	background-image: url("../images/cover.gif");
}

#info-block{
	-moz-transition: all .2s ease-in;
    -o-transition: all .2s ease-in;
    -webkit-transition: all .2s ease-in;
    transition: all .2s ease-in;
	background-color: rgba(0,0,0,0.15);
	border: solid;
	border-width: 5px;
	border-color: rgba(255,255,255,0.8);
	border-radius: 10px;
	color: rgba(255,255,255,1);
	width: 300px;
	height: 200px;
	position: fixed;
	bottom: -10px;
	right: 40px;
	padding: 10px;
	text-align: center;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
}
#info-block:hover{
	background-color: rgba(0,0,0,0.5);
	/*-webkit-filter: blur(5px); 
    filter: blur(5px);*/
}
/*#info-block h2{
	font-weight: 400;
}*/

#info-block h1{
	/*font-weight: 400;*/
}

#info-block h3{
	/*font-weight: 400;*/

	color: rgba(215,249,251,1);
	/*color: rgba(251,210,227,1);*/
	/*color: rgba(187,196,255,1);*/
}

/*#info-block::before{
	-webkit-filter: blur(5px); 
    filter: blur(5px);
}*/

#rsvp-button{
	-moz-transition: all .1s ease-in;
    -o-transition: all .1s ease-in;
    -webkit-transition: all .1s ease-in;
    transition: all .1s ease-in;
	border: solid;
	border-width: 4px;
	border-radius: 3px;
	border-color: rgba(215,249,251,1);
	width: 40%;
	height: auto;
	vertical-align: middle;
	text-align: center;
	font-size: 1.5em;
	line-height: 1.5em;
	cursor: pointer;
}

#rsvp-button:hover{
	background-color: rgba(215,249,251,1);
	color: rgba(0,0,0,0.7);
}

#schedule{
	background-color: rgba(33,35,56,1);
	padding-bottom: 125px;
	/*height: 500px;*/
}

#schedule-container{
	
}

#schedule-wrapper{
	margin-left: 20vw;
	width: calc(100% - 20vw);
	padding-bottom: 40px; 
	/*height: calc(100% - 200px);*/
	/*overflow: auto;*/
}

#schedule-title{
	
}

#petit-image{
	background-image: url("../images/mobile-petit-sky.jpg");
}

#back-image{
	background-image: url("../images/cover.jpg");
}

#image2{
	background-image: url("../images/mobile-image2.jpg");
}

#agenda-object-selected .agenda-trackball{
	width: 20px;
	margin-top: 0;
	height: 20px;
	border-radius: 20px;
	left: -11px;
	background-color: rgba(10,50,92,1);
	z-index: 3;
}


/*----------------------------------------@MEDIA----------------------------------------*/
@media(max-width: 3800px){
	.min-width-1124{
		min-width: 3067px;
	}
	.min-width-999{
		min-width: 2729px;
	}
}

@media(max-width: 1500px){
	.min-width-1331{
		min-width: 1331px;
	}
	.min-width-999{
		min-width: 999px;
	}
}



@media(max-width:755px){

	/*MOBILE POSITIONING*/

	.ad-avoider{
		width: 100%;
	}

	.mobile-center-h1{
		position: relative;
		margin: 0 auto;
		padding: 0;
		text-align: center;
	}

	.mobile-padding-vertical-bump{
		padding-top: 40px;
		padding-bottom: 40px;
	}

	.mobile-top-links-positioning{
		background-color: black;
		height: 60px;
		position: fixed;
		top: auto;
		/*left: 50%;*/
		/*transform: translateX(-50%);*/
		width: 100%;
		bottom: 0px;
		left: 0;
		vertical-align: middle;
	}
	.mobile-top-links-container{
		margin: 0 auto;
		width: auto;
		text-align: center;
		transform: translateY(90%);
	}

	.faq-item{
		width: 100%;
		float: left;
	}

	.center{
		text-align: left;
		width: 100%;
	}



	/*MOBILE UNIQUE*/

	#info-block{
		display: none;
	}

	#back-image{
		background-position: right bottom;
		width: 100%;
	}
	#schedule-wrapper{
		margin-left: 30vw;
	}
}

